# scc_at_isc25

./: AUTHORS.TXT  CMakeLists.txt  README.md  main.cpp  main_mpi.cpp  output.nc
build_std/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std/core/: Makefile
build_std/io/: Makefile  cmake_install.cmake
build_std/test/: CTestTestfile.cmake  Makefile  muphys_core_test[1]_include.cmake  muphys_core_test[1]_tests.cmake
build_std_2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_2/core/: Makefile
build_std_cpu_double/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_cpu_single/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_gpu_mpi_double/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_gpu_mpi_single/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/: CMakeLists.txt
io/: CMakeLists.txt  io.cpp  io.hpp
reference_results/: seq_11k_double.nc  seq_11k_single.nc  seq_20k_double.nc  seq_20k_single.nc  seq_dbg_double.nc  seq_dbg_single.nc
scripts/: build.sh  build_cpu_double.sh  build_cpu_single.sh  build_gpu_double.sh  build_gpu_single.sh  check-correctness.sh  levante-cpu.sbatch  levante-gpu-energy.batch  levante-gpu.sbatch  levante-setup.sh  process_and_plot.py  run_wrapper_levante.sh
seq/: seq_11k_double.nc  seq_11k_single.nc  seq_20_single.nc  seq_20k_double.nc  seq_dbg_double.nc  seq_dbg_single.nc
tasks/: dbg.nc  input.nc
test/: CMakeLists.txt  common.cc
(+81 files in other folders)
